<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/appHeading"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/txtAppHeading" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smlab" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:text="0"
            android:id="@+id/entryItem"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAddEntry"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnAddEntry"
            android:onClick="onClickBtnAddEntry"/>

        <Button
            android:id="@+id/btnSubEntry"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnSubEntry"
            android:onClick="onClickBtnSubEntry"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:text="0"
            android:id="@+id/exitItem"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAddExit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnAddExit"
            android:onClick="onClickBtnAddExit"/>

        <Button
            android:id="@+id/btnSubExit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnSubExit"
            android:onClick="onClickBtnSubExit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:text="0"
            android:id="@+id/readItem"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAddRead"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnAddRead"
            android:onClick="onClickBtnAddRead"/>

        <Button
            android:id="@+id/btnSubRead"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnSubRead"
            android:onClick="onClickBtnSubRead"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:text="0"
            android:id="@+id/writeItem"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAddWrite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnAddWrite"
            android:onClick="onClickBtnAddWrite"/>

        <Button
            android:id="@+id/btnSubWrite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnSubWrite"
            android:onClick="onClickBtnSubWrite"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/showLabel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <TextView
        android:text="0"
        android:id="@+id/showCount"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btnHelp"
        android:onClick="onClickBtnHelp"/>


</LinearLayout>
