<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/appHeading"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/txtAppHeading" />


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smlab" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtItem"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintTxtItem"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAddEntry"
            android:onClick="onClickBtnAdd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@android:id/empty"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/txtEmpty" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:text="@string/btnDel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/btnDel"
            android:onClick="onClickBtnDelItem"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>


